[gd_scene load_steps=6 format=3 uid="uid://b2u2anrp0wse7"]

[ext_resource type="Script" path="res://scenes/TileMapLevel1.gd" id="1_rp5ct"]
[ext_resource type="TileSet" uid="uid://x8wbg2ay8wm2" path="res://resources/tileset.tres" id="2_lr0l0"]
[ext_resource type="PackedScene" uid="uid://ijm2402jiebd" path="res://scenes/renderer.tscn" id="3_b2qec"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xnsm8"]
size = Vector2(6.5, 157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3myl"]
size = Vector2(6, 127)

[node name="TileMapLevel1" type="Node2D"]
script = ExtResource("1_rp5ct")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1360.0
offset_bottom = 496.0
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_lr0l0")
format = 2
layer_0/name = "Mine"
layer_0/tile_data = PackedInt32Array(1703936, 524288, 4, 1703937, 524288, 4, 1376258, 262144, 3, 1703938, 524288, 4, 1376259, 327680, 3, 1703939, 524288, 4, 1376260, 327680, 3, 1703940, 524288, 4, 1376261, 327680, 3, 1703941, 524288, 4, 1376262, 327680, 3, 1703942, 524288, 4, 1376263, 393216, 3, 1703943, 524288, 4, 1703944, 524288, 4, 1638409, 983040, 5, 1572874, 983040, 5, 1572875, 1048576, 5, 1572876, 1048576, 5, 1572877, 1048576, 5, 1572878, 1048576, 5, 1179663, 262144, 3, 1572879, 1048576, 5, 1179664, 327680, 3, 1572880, 1114112, 5, 1179665, 327680, 3, 1638417, 1114112, 5, 1179666, 327680, 3, 1703954, 524288, 4, 1179667, 327680, 3, 1703955, 524288, 4, 1179668, 327680, 3, 1703956, 524288, 4, 1179669, 327680, 3, 1703957, 524288, 4, 1179670, 393216, 3, 1703958, 524288, 4, 1703959, 524288, 4, 1703960, 524288, 4, 1703961, 524288, 4, 1703962, 524288, 4, 1703963, 524288, 4, 851996, 262144, 3, 1703964, 524288, 4, 851997, 327680, 3, 1638429, 458752, 4, 851998, 327680, 3, 1572894, 458752, 4, 851999, 327680, 3, 852000, 327680, 3, 852001, 327680, 3, 1507361, 458752, 4, 852002, 327680, 3, 1507362, 524288, 4, 852003, 393216, 3, 1507363, 524288, 4, 1507364, 524288, 4, 1507365, 524288, 4, 1507366, 524288, 4, 1507367, 524288, 4, 1507368, 524288, 4, 1507369, 524288, 4, 1507370, 524288, 4, 1507371, 524288, 4, 1507372, 589824, 4, 1572915, 589824, 4, 1638452, 524288, 4, 1638453, 524288, 4, 1638454, 524288, 4, 1638455, 524288, 4, 1638456, 524288, 4, 1638457, 524288, 4, 1703993, 524288, 4, 1638458, 589824, 4, 1703994, 524288, 4, 1769530, 524288, 4, 1835066, 524288, 4, 1835067, 589824, 4, 1900603, 524288, 4, 1900604, 524288, 4, 1900605, 524288, 4, 1900606, 524288, 4, 1900607, 524288, 4, 1900608, 1048576, 5, 1900609, 1048576, 5, 1900610, 1048576, 5, 1900611, 1048576, 5, 1900612, 1048576, 5, 1900613, 1048576, 5, 1900614, 1048576, 5, 1900615, 1048576, 5, 1900616, 1048576, 5, 1900617, 1048576, 5, 1900618, 1048576, 5, 1900619, 1048576, 5, 1900620, 1048576, 5, 1966157, 1048576, 5, 1966158, 1048576, 5, 1900623, 1048576, 5, 1900624, 1048576, 5, 1900625, 1048576, 5, 1900626, 1048576, 5, 1900627, 1048576, 5, 1900628, 1048576, 5, 852004, 0, 4, 917540, 0, 4, 983076, 0, 4, 1048612, 0, 4, 1114148, 0, 4, 1179684, 0, 4, 1245220, 0, 4, 1310756, 0, 4, 1376292, 0, 4, 1835078, 0, 4, 1769542, 0, 4, 1704006, 0, 4, 1638470, 0, 4, 1572934, 0, 4, 1507398, 0, 4, 1441862, 0, 4, 1376326, 0, 4, 1376325, 393216, 3, 1376324, 327680, 3, 1376323, 327680, 3, 1376322, 327680, 3, 1441858, 327680, 3, 1441857, 327680, 3, 1441856, 327680, 3, 1441855, 327680, 3, 1441854, 327680, 3, 1441853, 327680, 3, 1376318, 327680, 3, 1376317, 327680, 3, 1376316, 327680, 3, 1376315, 327680, 3, 1376314, 327680, 3, 1376313, 262144, 3, 1507328, 851968, 4, 63, 262144, 0, 65599, 262144, 0, 131135, 262144, 0, 196671, 262144, 0, 262207, 262144, 0, 327743, 262144, 0, 393279, 262144, 0, 458815, 262144, 0, 524351, 262144, 0, 589887, 327680, 0, 655422, 262144, 1, 720957, 262144, 1, 786492, 262144, 1, 852028, 262144, 2, 852029, 327680, 2, 655424, 393216, 1, 720961, 393216, 1, 786498, 393216, 1, 852034, 393216, 2, 852033, 327680, 2, 852032, 327680, 2, 852031, 327680, 2, 852030, 327680, 2, 1572895, 524288, 4, 1572896, 524288, 4, 1572909, 524288, 4, 1572910, 524288, 4, 1572911, 524288, 4, 1572912, 524288, 4, 1572913, 524288, 4, 1572914, 524288, 4, 1441828, 0, 4, 1572897, 524288, 4, 1572898, 524288, 4, 1572899, 524288, 4, 1572900, 524288, 4, 1572901, 524288, 4, 1572902, 524288, 4, 1638439, 524288, 4, 1638440, 524288, 4, 1638441, 524288, 4, 1638442, 524288, 4, 1638443, 524288, 4, 1572907, 524288, 4, 1572906, 524288, 4, 1572905, 524288, 4, 1572904, 524288, 4, 1572903, 524288, 4, 1638444, 524288, 4, 1572908, 524288, 4, 1638438, 524288, 4, 1638437, 524288, 4, 1638436, 524288, 4, 1638435, 524288, 4, 1638434, 524288, 4, 1638433, 524288, 4, 1638432, 524288, 4, 1638431, 524288, 4, 1638430, 524288, 4, 1703966, 524288, 4, 1769502, 524288, 4, 1703965, 524288, 4, 1769495, 524288, 4, 1769494, 524288, 4, 1769493, 524288, 4, 1769492, 524288, 4, 1769491, 524288, 4, 1703967, 524288, 4, 1703968, 524288, 4, 1703969, 524288, 4, 1703970, 524288, 4, 1703971, 524288, 4, 1703972, 524288, 4, 1703973, 524288, 4, 1638445, 524288, 4, 1638446, 524288, 4, 1638447, 524288, 4, 1638448, 524288, 4, 1638449, 524288, 4, 1638450, 524288, 4, 1638451, 524288, 4, 1703974, 524288, 4, 1703975, 524288, 4, 1703976, 524288, 4, 1703977, 524288, 4, 1703978, 524288, 4, 1703981, 524288, 4, 1703982, 524288, 4, 1703983, 524288, 4, 1703984, 524288, 4, 1703985, 524288, 4, 1703986, 524288, 4, 1703987, 524288, 4, 1703988, 524288, 4, 1703989, 524288, 4, 1703990, 524288, 4, 1703991, 524288, 4, 1703992, 524288, 4, 1703979, 524288, 4, 1703980, 524288, 4, 1769529, 524288, 4, 1900601, 524288, 4, 1900600, 524288, 4, 1900599, 524288, 4, 1900598, 524288, 4, 1900597, 524288, 4, 1900596, 524288, 4, 1900595, 524288, 4, 1900594, 524288, 4, 1900593, 524288, 4, 1900592, 524288, 4, 1900591, 524288, 4, 1900590, 524288, 4, 1900589, 524288, 4, 1900588, 524288, 4, 1900587, 524288, 4, 1900586, 524288, 4, 1900585, 524288, 4, 1900584, 524288, 4, 1900583, 524288, 4, 1900582, 524288, 4, 1900581, 524288, 4, 1900580, 524288, 4, 1900579, 524288, 4, 1900578, 524288, 4, 1900577, 524288, 4, 1900576, 524288, 4, 1769504, 524288, 4, 1769505, 524288, 4, 1769506, 524288, 4, 1769507, 524288, 4, 1769508, 524288, 4, 1769509, 524288, 4, 1769510, 524288, 4, 1769511, 524288, 4, 1769512, 524288, 4, 1769513, 524288, 4, 1769514, 524288, 4, 1769515, 524288, 4, 1769516, 524288, 4, 1769517, 524288, 4, 1769518, 524288, 4, 1769519, 524288, 4, 1769520, 524288, 4, 1769521, 524288, 4, 1769522, 524288, 4, 1769523, 524288, 4, 1769524, 524288, 4, 1769525, 524288, 4, 1769526, 524288, 4, 1769527, 524288, 4, 1769528, 524288, 4, 1835065, 524288, 4, 1835064, 524288, 4, 1835063, 524288, 4, 1835062, 524288, 4, 1835061, 524288, 4, 1835060, 524288, 4, 1835059, 524288, 4, 1835058, 524288, 4, 1835057, 524288, 4, 1835056, 524288, 4, 1835055, 524288, 4, 1835054, 524288, 4, 1835053, 524288, 4, 1835052, 524288, 4, 1835051, 524288, 4, 1835050, 524288, 4, 1835049, 524288, 4, 1835048, 524288, 4, 1835047, 524288, 4, 1835046, 524288, 4, 1835045, 524288, 4, 1835044, 524288, 4, 1835043, 524288, 4, 1835042, 524288, 4, 1835041, 524288, 4, 1835040, 524288, 4, 1835039, 524288, 4, 1835038, 524288, 4, 1835037, 524288, 4, 1835036, 524288, 4, 1835035, 524288, 4, 1835034, 524288, 4, 1835033, 524288, 4, 1835032, 524288, 4, 1835031, 524288, 4, 1835030, 524288, 4, 1835029, 524288, 4, 1835028, 524288, 4, 1835027, 524288, 4, 1835026, 524288, 4, 1835025, 524288, 4, 1835024, 524288, 4, 1835023, 524288, 4, 1835022, 524288, 4, 1835021, 524288, 4, 1835020, 524288, 4, 1835019, 524288, 4, 1835018, 524288, 4, 1835017, 524288, 4, 1835016, 524288, 4, 1835015, 524288, 4, 1835014, 524288, 4, 1835013, 524288, 4, 1835012, 524288, 4, 1835011, 524288, 4, 1835010, 524288, 4, 1835009, 524288, 4, 1835008, 524288, 4, 1769472, 524288, 4, 1769473, 524288, 4, 1769474, 524288, 4, 1769475, 524288, 4, 1769476, 524288, 4, 1769477, 524288, 4, 1769478, 524288, 4, 1769479, 524288, 4, 1769480, 524288, 4, 1769481, 524288, 4, 1769482, 524288, 4, 1769483, 524288, 4, 1769484, 524288, 4, 1703948, 524288, 4, 1703949, 524288, 4, 1703950, 524288, 4, 1703951, 524288, 4, 1703952, 524288, 4, 1703953, 524288, 4, 1769489, 524288, 4, 1769490, 524288, 4, 1769488, 524288, 4, 1769487, 524288, 4, 1769486, 524288, 4, 1769485, 524288, 4, 1703945, 524288, 4, 1703946, 524288, 4, 1703947, 524288, 4, 1638411, 524288, 4, 1638412, 524288, 4, 1638413, 524288, 4, 1638414, 524288, 4, 1638415, 524288, 4, 1769496, 524288, 4, 1769497, 524288, 4, 1769498, 524288, 4, 1769499, 524288, 4, 1769500, 524288, 4, 1769501, 524288, 4, 1769503, 524288, 4, 1900575, 524288, 4, 1900574, 524288, 4, 1900573, 524288, 4, 1900572, 524288, 4, 1900571, 524288, 4, 1900570, 524288, 4, 1900569, 524288, 4, 1900568, 524288, 4, 1900567, 524288, 4, 1900566, 524288, 4, 1900565, 524288, 4, 1900564, 524288, 4, 1900563, 524288, 4, 1900562, 524288, 4, 1900561, 524288, 4, 1900560, 524288, 4, 1900559, 524288, 4, 1900558, 524288, 4, 1900557, 524288, 4, 1900556, 524288, 4, 1900555, 524288, 4, 1900554, 524288, 4, 1900549, 524288, 4, 1900548, 524288, 4, 1900547, 524288, 4, 1900545, 524288, 4, 1900544, 524288, 4, 1900546, 524288, 4, 1900550, 524288, 4, 1900551, 524288, 4, 1900552, 524288, 4, 1900553, 524288, 4, 1900602, 524288, 4)
layer_1/name = "Other"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(917523, 655360, 6, 983059, 655360, 6, 1048595, 655360, 6, 917550, 983040, 17, 852015, 917504, 18, 917551, 917504, 19, 720896, 983040, 5, 786432, 983040, 6, 851968, 983040, 6, 720897, 1048576, 5, 589826, 262144, 5, 720898, 1048576, 5, 589827, 327680, 5, 720899, 1048576, 5, 589828, 393216, 5, 720900, 1048576, 5, 720901, 1048576, 5, 720902, 1048576, 5, 720903, 1048576, 5, 720904, 1048576, 5, 524297, 262144, 5, 720905, 1048576, 5, 524298, 327680, 5, 720906, 1048576, 5, 524299, 393216, 5, 720907, 1048576, 5, 720908, 1048576, 5, 720909, 1048576, 5, 720910, 1048576, 5, 720911, 1048576, 5, 720912, 1048576, 5, 720913, 1048576, 5, 720914, 1048576, 5, 720915, 1114112, 5, 786451, 1114112, 6, 851987, 655360, 5, 1114131, 655360, 6, 851988, 720896, 5, 851989, 720896, 5, 851990, 720896, 5, 851991, 720896, 5, 851992, 720896, 5, 851993, 720896, 5, 851994, 720896, 5, 851995, 720896, 5, 851996, 720896, 5, 851997, 786432, 5, 917533, 786432, 6, 983069, 786432, 6, 1048605, 786432, 6, 1114141, 786432, 6, 852001, 1048576, 5, 852002, 1048576, 5, 852003, 1048576, 5, 852005, 1048576, 5, 852006, 1048576, 5, 852011, 917504, 17, 917547, 917504, 18, 983083, 917504, 19, 852012, 983040, 17, 917548, 983040, 18, 983084, 983040, 19, 852013, 1048576, 17, 917549, 917504, 17, 983085, 917504, 18, 1048621, 917504, 19, 983086, 983040, 18, 1048622, 983040, 19, 786479, 917504, 17, 983087, 1048576, 18, 1048623, 1048576, 19, 786480, 983040, 17, 852016, 983040, 18, 917552, 983040, 19, 786481, 983040, 17, 852017, 983040, 18, 917553, 983040, 19, 786482, 983040, 17, 852018, 983040, 18, 917554, 983040, 19, 786483, 983040, 17, 852019, 983040, 18, 917555, 983040, 19, 786484, 983040, 17, 852020, 983040, 18, 917556, 983040, 19, 786485, 983040, 17, 852021, 983040, 18, 917557, 983040, 19, 786486, 983040, 17, 852022, 983040, 18, 917558, 983040, 19, 786487, 983040, 17, 852023, 983040, 18, 917559, 983040, 19, 786488, 983040, 17, 852024, 983040, 18, 917560, 983040, 19, 786489, 1048576, 17, 852025, 1048576, 18, 917561, 1048576, 19)

[node name="LadderArea" type="Area2D" parent="TileMap"]
position = Vector2(578, 215)

[node name="LadderCollider1" type="CollisionShape2D" parent="TileMap/LadderArea"]
position = Vector2(6.25, 73.5)
shape = SubResource("RectangleShape2D_xnsm8")

[node name="LadderCollider2" type="CollisionShape2D" parent="TileMap/LadderArea"]
position = Vector2(550, 184.5)
shape = SubResource("RectangleShape2D_j3myl")

[node name="Renderer" parent="." instance=ExtResource("3_b2qec")]

[connection signal="body_entered" from="TileMap/LadderArea" to="." method="_on_ladder_area_body_entered"]
[connection signal="body_exited" from="TileMap/LadderArea" to="." method="_on_ladder_area_body_exited"]
